# popcornmachine

./: .gitignore  CLAUDE.md  box_score.html  gameflow.html  home.html  pyproject.toml
.github/workflows/: deploy.yml  pipeline.yml
data/: index.json
data/games/0022500001/: boxscore.json  gameflow.json
data/games/0022500529/: boxscore.json  gameflow.json
data/games/0022500651/: boxscore.json  gameflow.json
data/games/0022500652/: boxscore.json  (+1 more)
data/scores/: 2026-01-19.json  2026-01-28.json  2026-01-29.json  2026-01-30.json  2026-01-31.json  2026-02-01.json  2026-02-02.json  2026-02-03.json  2026-02-04.json  2026-02-05.json  2026-02-06.json  2026-02-07.json  2026-02-08.json  2026-02-09.json  2026-02-10.json  2026-02-11.json  2026-02-12.json  2026-02-13.json  2026-02-15.json  2026-02-19.json  2026-02-20.json  2026-02-21.json  2026-02-22.json  2026-02-23.json  2026-02-24.json  2026-02-25.json  2026-02-26.json  2026-02-27.json  2026-02-28.json  2026-03-01.json  2026-03-02.json  2026-03-03.json  2026-03-04.json  2026-03-05.json  2026-03-06.json  2026-03-07.json  2026-03-08.json  2026-03-09.json  2026-03-10.json  2026-03-11.json  (+42 more)
docs/design-plans/: 2026-02-26-popcorn-remake.md
docs/test-plans/: 2026-02-26-popcorn-remake.md
pipeline/: cleanup.py  fetch.py  main.py  transform.py  write.py
tests/: __init__.py  conftest.py  test_cleanup.py  test_fetch.py  test_main.py  test_transform.py  test_write.py
web/: components.json  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
web/src/: App.tsx  index.css  main.tsx  router.tsx
(+1175 files in other folders)
