[project]
name = "popcorn-remake"
version = "0.1.0"
description = "NBA game stats data pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "nba_api",
    "npm>=0.1.1",
    "pandas>=2.3.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
